add animations to images and changes to cart

--- a/public/index.html
+++ b/public/index.html
@@ -30,10 +30,11 @@
     <div class="heading">
       <h1>Shopify Product Description React Demo</h1>
       <h3>
-        This demo allows you to disply your Products to the user using a React component.
+        This demo allows you to display your Products to the user using a React component.
         <br>
         Including the selection of Variants
       </h3>
+      <h3><a href="https://github.com/abdulhannanali/shopify-product-demo">Fork</a> on <a href="https://github.com/abdulhannanali">Github</a></h3>
     </div>
     <div class="cart js-active"></div>
     <div class="container">
@@ -49,6 +50,7 @@
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
     -->
-    
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </body>
 </html>
